--- a/onesystem/src/main/webapp/static/css/register.css
+++ b/onesystem/src/main/webapp/static/css/register.css
@@ -1,4 +1,4 @@
 body{
-	background:url("./static/image/background.jpg") no-repeat fixed top ;
+	background:url("../image/background.jpg") no-repeat fixed top ;
 	background-size:100% 100%;
 }
